@@ -11,38 +11,21 @@ fonttype = truetype
 texmf = usr/share/texmf
 fontpath = usr/share/fonts/$(fonttype)
 
-
-build: build-stamp
-build-stamp:
-	dh_testdir
-
-	# Add here commands to compile the package.
-	touch build-stamp
+build:
 
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp install-stamp
-
-	# Add here commands to clean up after the build process.
-	-$(MAKE) clean
-
+	rm -f install-stamp
 	dh_clean
 
 install: install-stamp
-install-stamp: build-stamp
+install-stamp:
 	dh_testdir
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
-
-	# Add here commands to install the package into debian/tmp.
-	mkdir -p `pwd`/debian/tmp/usr/share/fonts/truetype
-	mkdir -p `pwd`/debian/tmp/usr/sbin
-
-	cp -p `pwd`/update-ms-fonts `pwd`/debian/tmp/usr/sbin
-	#install -m 644 debian/msttcorefonts.hints `pwd`/debian/tmp/etc/defoma/hints/msttcorefonts.hints
-
+	dh_install
 	touch install-stamp
 
 # Build architecture-independent files here.
@@ -70,9 +53,6 @@ binary-indep: build install
 # Build architecture-dependent files here.
 binary-arch: build install
 # We have nothing to do by default.
-
-source diff:                                                                  
-	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary
